# pomodoro

./: Cargo.toml
src/: loader.rs  main.rs  windows.rs
src/helpers/: mod.rs  notifications.rs  printer.rs
src/task_manager/: mod.rs  models.rs  task.rs
src/ui/: tui.rs
