[package]
name = "pomodoro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
clap = { version = "4.4.18", features = ["derive"] }
ratatui = "0.26.0"
crossterm = "0.27.0"
